--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 /model
 /.vagrant
 /.vagrant.d
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/inspectionProfiles/Project_Default.xml
+.idea/misc.xml
+.idea/vcs.xml
+.idea/workspace.xml
