--- a/ansible/playbooks/k8s-setup.yml
+++ b/ansible/playbooks/k8s-setup.yml
@@ -26,13 +26,20 @@
       args:
         executable: /bin/bash
 
+    - name: Install kubectl
+      shell: |
+        curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/arm64/kubectl"
+        sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
+      args:
+        executable: /bin/bash
+
     - name: Apply Kubernetes YAML files
       shell: |
-        kubectl apply -f /vagrant/kubernetes/deployment.yaml
         kubectl apply -f /vagrant/kubernetes/service.yaml
+        kubectl apply -f /vagrant/kubernetes/deployment.yaml
         kubectl apply -f /vagrant/kubernetes/ingress.yaml
-        kubectl apply -f /vagrant/kubernetes/prometheusrule.yaml
-        kubectl apply -f /vagrant/kubernetes/servicemonitor.yaml
+#         kubectl apply -f /vagrant/kubernetes/prometheusrule.yaml
+#         kubectl apply -f /vagrant/kubernetes/servicemonitor.yaml
       args:
         executable: /bin/bash
       environment:
