--- a/ansible/inventory.cfg
+++ b/ansible/inventory.cfg
@@ -1,9 +1,9 @@
 [controller]
-controller ansible_host=127.0.0.1 ansible_user=vagrant ansible_port=2222 ansible_ssh_private_key_file=.vagrant/machines/controller/vmware_desktop/private_key
+controller ansible_host=192.168.56.2 ansible_user=vagrant ansible_ssh_private_key_file=.vagrant/machines/controller/virtualbox/private_key
 
 [worker]
-node1 ansible_host=127.0.0.1 ansible_user=vagrant ansible_port=2200 ansible_ssh_private_key_file=.vagrant/machines/node1/vmware_desktop/private_key
-node2 ansible_host=127.0.0.1 ansible_user=vagrant ansible_port=2201 ansible_ssh_private_key_file=.vagrant/machines/node2/vmware_desktop/private_key
+node1 ansible_host=192.168.56.3 ansible_user=vagrant ansible_ssh_private_key_file=.vagrant/machines/node1/virtualbox/private_key
+node2 ansible_host=192.168.56.4 ansible_user=vagrant ansible_ssh_private_key_file=.vagrant/machines/node2/virtualbox/private_key
 
 [kubernetes:children]
 controller
