--- a/setup_ansible.yml
+++ b/setup_ansible.yml
@@ -2,19 +2,32 @@
   become: yes
   tasks:
     - name: Install k3s
-      shell: |
-        curl -sfL https://get.k3s.io | sh -
+      shell: curl -sfL https://get.k3s.io | sh -
+
     - name: Fetch node token
       shell: cat /var/lib/rancher/k3s/server/node-token
-      register: node_token
-    - name: Set node_token
-      set_fact:
-        node_token: "{{ node_token.stdout }}"
-    - debug: var=hostvars['controller']['node_token']
+      register: node_token_result
+      
+    - name: Save node token to file
+      copy:
+        content: "{{ node_token_result.stdout }}"
+        dest: /vagrant/node-token
 
-- hosts: node
+- hosts: nodes
   become: yes
   tasks:
-    - name: Install k3s
+    - name: Load node token from file
+      slurp:
+        src: /vagrant/node-token
+      register: token_content
+
+    - name: Save node token locally
+      copy:
+        content: "{{ token_content.content | b64decode }}"
+        dest: /tmp/k3s_node_token
+
+    - name: Install k3s agent
       shell: |
-        curl -sfL https://get.k3s.io | K3S_URL=https://192.168.56.2:6443 K3S_TOKEN={{ hostvars['controller']['node_token'] }} sh -
+        curl -sfL https://get.k3s.io | K3S_URL=https://192.168.56.2:6443 K3S_TOKEN=$(cat /tmp/k3s_node_token) sh -
+      args:
+        executable: /bin/bash
