Add Prometheus listening ports for metrics

--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -14,10 +14,11 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: ghcr.io/remla24-team3/app:frontend
+        image: ghcr.io/remla24-team3/app-frontend:latest
         ports:
         - containerPort: 3000
       - name: service
-        image: ghcr.io/remla24-team3/app:service
+        image: ghcr.io/remla24-team3/app-service:latest
         ports:
         - containerPort: 5000
+        - containerPort: 5001 #Prometheus
