--- a/ansible/inventory.cfg
+++ b/ansible/inventory.cfg
@@ -1,10 +1,6 @@
-[controller]
+[controllers]
 controller ansible_host=192.168.56.2 ansible_user=vagrant ansible_ssh_private_key_file=.vagrant/machines/controller/virtualbox/private_key
 
-[worker]
+[nodes]
 node1 ansible_host=192.168.56.3 ansible_user=vagrant ansible_ssh_private_key_file=.vagrant/machines/node1/virtualbox/private_key
 node2 ansible_host=192.168.56.4 ansible_user=vagrant ansible_ssh_private_key_file=.vagrant/machines/node2/virtualbox/private_key
-
-[kubernetes:children]
-controller
-worker
