--- a/ansible/playbooks/k8s-setup.yml
+++ b/ansible/playbooks/k8s-setup.yml
@@ -37,6 +37,8 @@
         name: prometheus-community
         repo_url: https://prometheus-community.github.io/helm-charts
 
+
+
     - name: Install k3s server
       shell: |
         curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="--disable traefik --write-kubeconfig-mode=644 --node-external-ip 192.168.56.2 --flannel-external-ip 192.168.56.2" sh -
@@ -65,6 +67,14 @@
               allow-snippet-annotations: true
     
 
+    # - name: Wait for Nginx Ingress Controller to be ready
+    #   command: >
+    #     kubectl wait --namespace ingress-nginx 
+    #     --for=condition=ready pod 
+    #     --selector=app.kubernetes.io/component=controller 
+    #     --timeout=120s
+    #   args:
+    #     executable: /bin/bash
 
     - name: Install Kubernetes Dashboard
       kubernetes.core.helm:
@@ -89,6 +99,10 @@
               server:
                 root_url: "%(protocol)s://%(domain)s:%(http_port)s/grafana/"
                 serve_from_sub_path: true
+          # prometheus:
+          #   prometheusSpec:
+          #     externalUrl: http://192.168.56.2/prometheus/
+              
 
 
     - name: Apply Kubernetes YAML files
@@ -98,6 +112,8 @@
         kubectl apply -f /vagrant/kubernetes/ingress.yaml
         kubectl apply -f /vagrant/kubernetes/model-service.yaml
         kubectl apply -f /vagrant/kubernetes/ingress2.yaml -n monitoring
+        kubectl apply -f /vagrant/kubernetes/service-account.yaml -n monitoring
+        kubectl apply -f /vagrant/kubernetes/monitoring-service.yaml -n monitoring
       environment:
         KUBECONFIG: /etc/rancher/k3s/k3s.yaml
 
