--- a/kubernetes/ingress2.yaml
+++ b/kubernetes/ingress2.yaml
@@ -19,36 +19,110 @@ spec:
             name: prometheus-operator-grafana
             port:
               number: 80
-      - path: /prometheus/?(.*)
-        pathType: ImplementationSpecific
-        backend:
-          service:
-            name: prometheus-operator-kube-p-prometheus
-            port:
-              number: 9090
+      # - path: /prometheus/?(.*)
+      #   pathType: ImplementationSpecific
+      #   backend:
+      #     service:
+      #       name: prometheus-operator-kube-p-prometheus
+      #       port:
+      #         number: 9090
 
----
+# ---
 
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: kubernetes-dashboard
-  labels:
-    app.kubernetes.io/name: kubernetes-dashboard  
-  annotations:
-    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
-    nginx.ingress.kubernetes.io/configuration-snippet: |
-      rewrite ^(/dashboard)$ $1/ redirect;
-spec:
-  ingressClassName: nginx
-  rules:
-  - http:
-      paths:
-      - path: /dashboard(/|$)(.*)
-        pathType: ImplementationSpecific
-        backend:
-          service:
-            name: kubernetes-dashboard-kong-proxy
-            port:
-              number: 443
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   name: kubernetes-dashboard
+#   annotations:
+#     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+#     nginx.ingress.kubernetes.io/rewrite-target: /$2
+# spec:
+#   ingressClassName: nginx
+#   rules:
+#   - http:
+#       paths:
+#       - path: /dashboard(/|$)(.*)
+#         pathType: Prefix
+#         backend:
+#           service:
+#             name: kubernetes-dashboard
+#             port:
+#               number: 443
+
+
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   name: kubernetes-dashboard
+#   labels:
+#     app.kubernetes.io/name: kubernetes-dashboard  
+#   annotations:
+#     kubernetes.io/ingress.class: nginx
+#     # Add https backend protocol support for ingress-nginx
+#     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+#     nginx.ingress.kubernetes.io/configuration-snippet: |
+#       proxy_set_header Accept-Encoding "";
+#       sub_filter '<base href="/">' '<base href="/dashboard/">';
+#       sub_filter_once on;
+#     nginx.ingress.kubernetes.io/rewrite-target: /$2
+
+# spec:
+#   ingressClassName: nginx
+#   rules:
+#   - http:
+#       paths:
+#       - path: /dashboard/?(.*)
+#         pathType: Prefix
+#         backend:
+#           service:
+#             name: expose-kubernetes-dashboard
+#             port:
+#               number: 8010
+
+
+
+
+# apiVersion: v1
+# data:
+#   kong.yml: |
+#     _format_version: "3.0"
+#     services:
+#       - name: auth
+#         host: kubernetes-dashboard-auth
+#         port: 8000
+#         protocol: http
+#         routes:
+#           - name: authLogin
+#             paths:
+#               - /dashbaord/api/v1/login
+#             strip_path: false
+#           - name: authCsrf
+#             paths:
+#               - /dashboard/api/v1/csrftoken/login
+#             strip_path: false
+#           - name: authMe
+#             paths:
+#               - /dashboard/api/v1/me
+#             strip_path: false
+#       - name: api
+#         host: kubernetes-dashboard-api
+#         port: 8000
+#         protocol: http
+#         routes:
+#           - name: api
+#             paths:
+#               - /dashboard/api
+#             strip_path: false
+#           - name: metrics
+#             paths:
+#               - /dashboard/metrics
+#             strip_path: false
+#       - name: web
+#         host: kubernetes-dashboard-web
+#         port: 8000
+#         protocol: http
+#         routes:
+#           - name: root
+#             paths:
+#               - /dashboard
+#             strip_path: false
