--- a/kubernetes/istio.yaml
+++ b/kubernetes/istio.yaml
@@ -1,7 +1,12 @@
-apiVersion: networking.istio.io/v1beta1
+# TODO: We need to access this through minikube tunnel
+
+# TODO: "The custom routing is not random. Repeated requests from the same origin have a stable routing" 
+# So probably we want to use the user-token here, to do the routing
+
+apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
-  name: myapp-gateway
+  name: my-gateway
 spec:
   selector:
     istio: ingressgateway
@@ -11,65 +16,60 @@ spec:
       name: http
       protocol: HTTP
     hosts:
-    - "*"
+    - "*"  # Accepts requests from any host
+
 ---
+
+apiVersion: networking.istio.io/v1alpha3
+kind: DestinationRule
+metadata:
+  name: my-destinationrule
+spec:
+  host: my-web-app-service  # TODO: Specify the destination host
+  subsets:
+  - name: version-1
+    labels:
+      version: v1
+    trafficPolicy:
+      loadBalancer:
+        simple: ROUND_ROBIN  # Load balancing algorithm
+      connectionPool:
+        http:
+          http1MaxPendingRequests: 100  # Maximum number of pending requests
+          maxRequestsPerConnection: 5  # Maximum number of requests per connection
+  - name: version-2
+    labels:
+      version: v2
+    trafficPolicy:
+      loadBalancer:
+        simple: ROUND_ROBIN
+      connectionPool:
+        http:
+          http1MaxPendingRequests: 100
+          maxRequestsPerConnection: 5
+
+---
+
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: app-frontend-virtualservice
+  name: my-virtualservice
 spec:
   hosts:
-  - "*"
+  - my-web-app.com
   gateways:
-  - myapp-gateway
+  - my-gateway
   http:
-  - match:
-    - uri:
-        exact: "/"
-    route:
+  - route:
     - destination:
-        host: app-frontend
-        subset: v1
+        host: my-web-app-service
+        subset: version-1
         port:
-          number: 3000
+          number: 8080
       weight: 90
     - destination:
-        host: app-frontend
-        subset: v2
+        host: my-web-app-service
+        subset: version-2
         port:
-          number: 3000
+          number: 8080
       weight: 10
----
-apiVersion: networking.istio.io/v1beta1
-kind: VirtualService
-metadata:
-  name: app-service-virtualservice
-spec:
-  hosts:
-  - "*"
-  gateways:
-  - myapp-gateway
-  http:
-  - match:
-    - uri:
-        prefix: "/backend"
-    route:
-    - destination:
-        host: app-service
-        port:
-          number: 106
----
-apiVersion: networking.istio.io/v1beta1
-kind: DestinationRule
-metadata:
-  name: app-frontend
-spec:
-  host: app-frontend
-  subsets:
-  - name: v1
-    labels:
-      version: v1
-  - name: v2
-    labels:
-      version: v2
-
