--- a/kubernetes/istio.yaml
+++ b/kubernetes/istio.yaml
@@ -4,7 +4,7 @@ metadata:
   name: my-gateway
 spec:
   selector:
-    istio: ingressgateway # use Istio default gateway implementation
+    istio: ingressgateway
   servers:
   - port:
       number: 80
@@ -49,7 +49,7 @@ metadata:
   name: my-virtual-service
 spec:
   hosts:
-  - "*"  # Accepts requests from any host
+  - "*"
   gateways:
   - my-gateway
   http:
