--- a/kubernetes/istio.yaml
+++ b/kubernetes/istio.yaml
@@ -55,25 +55,27 @@ spec:
   http:
   - match:
     - uri:
-        prefix: "/"
+        prefix: /kiali
     route:
     - destination:
-        host: app-frontend
+        host: kiali-dashboard
         port:
-          number: 3000
+          number: 20001
   - match:
     - uri:
-        prefix: "/backend"
+          prefix: /jaeger
     route:
     - destination:
-        host: app-service
+        host: jaeger-dashboard
         port:
-          number: 106
+          number: 16686
   - match:
     - uri:
-        prefix: "/model"
+        prefix: /prometheus
     route:
-    - destination:
-        host: model-service
-        port:
-          number: 105
+      - destination:
+          host: prometheus
+          port:
+            number: 9090
+      rewrite:
+        uri: /
