--- a/kubernetes/prometheus.yaml
+++ b/kubernetes/prometheus.yaml
@@ -514,6 +514,8 @@ spec:
             - --web.console.libraries=/etc/prometheus/console_libraries
             - --web.console.templates=/etc/prometheus/consoles
             - --web.enable-lifecycle
+            # - --web.route-prefix=/
+            # - --web.external-url=http://192.168.56.2:31086/prometheus
           ports:
             - containerPort: 9090
           readinessProbe:
