--- a/kubernetes/istio.yaml
+++ b/kubernetes/istio.yaml
@@ -18,7 +18,7 @@ kind: DestinationRule
 metadata:
   name: my-destination-rule-frontend
 spec:
-  host: app-frontend
+  host: app-frontend.default.svc.cluster.local
   trafficPolicy:
     loadBalancer:
       simple: ROUND_ROBIN
@@ -28,7 +28,7 @@ kind: DestinationRule
 metadata:
   name: my-destination-rule-backend
 spec:
-  host: app-service
+  host: app-service.default.svc.cluster.local
   trafficPolicy:
     loadBalancer:
       simple: ROUND_ROBIN
@@ -38,7 +38,7 @@ kind: DestinationRule
 metadata:
   name: my-destination-rule-model
 spec:
-  host: model-service
+  host: model-service.default.svc.cluster.local
   trafficPolicy:
     loadBalancer:
       simple: ROUND_ROBIN
@@ -46,7 +46,7 @@ spec:
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: my-virtual-service
+  name: dashboards-virtual-service
 spec:
   hosts:
   - "*"
@@ -71,7 +71,15 @@ spec:
           number: 16686
   - match:
     - uri:
-        prefix: /prometheus
+          prefix: /grafana
+    route:
+    - destination:
+        host: grafana
+        port:
+          number: 3000
+  - match:
+    - uri:
+        prefix: /prometheus/
     route:
       - destination:
           host: prometheus
@@ -79,3 +87,38 @@ spec:
             number: 9090
     rewrite:
       uri: /
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: app-virtual-service
+spec:
+  hosts:
+  - "*"
+  gateways:
+  - my-gateway
+  http:
+  - match:
+    - uri:
+        prefix: /
+    route:
+    - destination:
+        host: app-frontend.default.svc.cluster.local
+        port:
+          number: 3000
+  - match:
+    - uri:
+          prefix: /backend
+    route:
+    - destination:
+        host: app-service.default.svc.cluster.local
+        port:
+          number: 106
+  - match:
+    - uri:
+        prefix: /model
+    route:
+      - destination:
+          host: model-service.default.svc.cluster.local
+          port:
+            number: 105
