--- a/kubernetes/prometheus.yaml
+++ b/kubernetes/prometheus.yaml
@@ -514,8 +514,8 @@ spec:
             - --web.console.libraries=/etc/prometheus/console_libraries
             - --web.console.templates=/etc/prometheus/consoles
             - --web.enable-lifecycle
-            # - --web.route-prefix=/
-            # - --web.external-url=http://192.168.56.2:31086/prometheus
+            - --web.external-url=http://192.168.56.2:32023/prometheus/
+            - --web.route-prefix=/
           ports:
             - containerPort: 9090
           readinessProbe:
