--- a/ansible/playbooks/k8s-setup.yml
+++ b/ansible/playbooks/k8s-setup.yml
@@ -71,14 +71,14 @@
               allow-snippet-annotations: true
     
 
-    # - name: Wait for Nginx Ingress Controller to be ready
-    #   command: >
-    #     kubectl wait --namespace ingress-nginx 
-    #     --for=condition=ready pod 
-    #     --selector=app.kubernetes.io/component=controller 
-    #     --timeout=120s
-    #   args:
-    #     executable: /bin/bash
+    - name: Wait for Nginx Ingress Controller to be ready
+      command: >
+        kubectl wait --namespace ingress-nginx 
+        --for=condition=ready pod 
+        --selector=app.kubernetes.io/component=controller 
+        --timeout=120s
+      args:
+        executable: /bin/bash
 
     - name: Install Kubernetes Dashboard
       kubernetes.core.helm:
@@ -110,46 +110,6 @@
         namespace: istio-system
         kubeconfig: /etc/rancher/k3s/k3s.yaml
 
-    # - name: Install Istio Base
-    #   shell: helm install istio-base istio/base -n istio-system --create-namespace
-    #   environment:
-    #     KUBECONFIG: /etc/rancher/k3s/k3s.yaml
-    #   become: yes
-
-    # - name: Install Istiod
-    #   shell: helm install istiod istio/istiod -n istio-system --wait
-    #   environment:
-    #     KUBECONFIG: /etc/rancher/k3s/k3s.yaml
-    #   become: yes
-
-
-    # - name: Install Istio Ingress Gateway
-    #   shell: helm install istio-ingress istio/gateway -n istio-system --wait
-    #   environment:
-    #     KUBECONFIG: /etc/rancher/k3s/k3s.yaml
-    #   become: yes
-
-
-
-    
-    # - name: Install Prometheus Operator
-    #   kubernetes.core.helm:
-    #     name: prometheus-operator
-    #     chart_ref: prometheus-community/kube-prometheus-stack
-    #     namespace: monitoring
-    #     create_namespace: true
-    #     kubeconfig: /etc/rancher/k3s/k3s.yaml
-    #     values:
-    #       grafana:
-    #         grafana.ini:
-    #           server:
-    #             root_url: "%(protocol)s://%(domain)s:%(http_port)s/grafana/"
-    #             serve_from_sub_path: true
-    #       # prometheus:
-    #       #   prometheusSpec:
-    #       #     externalUrl: http://192.168.56.2/prometheus/
-              
-
 
     - name: Apply Kubernetes YAML files
       shell: |
@@ -165,7 +125,7 @@
         kubectl apply -f /vagrant/kubernetes/kiali.yaml -n istio-system
         kubectl apply -f /vagrant/kubernetes/istio.yaml -n istio-system
         kubectl apply -f /vagrant/kubernetes/istio-service.yaml -n istio-system
-        kubectl apply -f /vagrant/kubernetes/ingress3.yaml -n istio-system
+        kubectl apply -f /vagrant/kubernetes/ingress.yaml
       environment:
         KUBECONFIG: /etc/rancher/k3s/k3s.yaml
 
