Added the grafana_dashboard.json

--- a/kubernetes/prometheus.yaml
+++ b/kubernetes/prometheus.yaml
@@ -54,7 +54,7 @@ data:
     # TODO: this ip 10.43.192.228 is the IP of the service app-service, need to double check if this is correct.
     - job_name: 'backend'
       static_configs:
-        - targets: ['10.43.192.228:106']
+        - targets: ['app-service.default.svc.cluster.local:106']
       metrics_path: '/metrics'
     - bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
       job_name: kubernetes-apiservers
